--- a/3.5.2-3.5.5_satosho.md
+++ b/3.5.2-3.5.5_satosho.md
@@ -310,3 +310,16 @@ $$
 $4R_E$ 程度のホイッスラーの場合、最小時間は通常 $f/f_\mathrm{Bmin} $ 〜 $0.42$ となる。このように、ノーズ周波数は、ホイッスラー波が地球からどの程度離れたところに行ったかを示している。また式3.39から、 $f$ と $f_N$ が与えられた場合の遅延に対して最も寄与する要素は、経路の最も遠い領域にある電子に起因することもわかる。なぜならば、(1)そこで分母の $f_L - f$ が最小であり、(2)経路のうち相対的に多くの部分は地磁気磁場の形のせいで遠くにあるからである。したがって、ノーズホイッスラー解析によって、ホイッスラー波が赤道面を横切った領域の電子密度を決定することが可能である。ノーズ周波数は信号が通った磁力線を示し、時間の遅延は赤道面付近の電子密度を示す。
 一般に、この解析では、周波数-時間曲線から3点を正確に読み取る必要があるため、軌跡が十分に明確である必要がある。関連する球面波の時間も分かれば、精度は向上する。力管に沿った電子密度分布のモデルを仮定する必要はあるが、結果はこれに対してあまり影響を受けない。
 ホイッスラーモード伝搬の結果とさらなる応用については、5.6.2項と9.2.1項で扱う。
+
+<br>
+
+## 3.5.5 部分反射
+
+電離層の底部では、波長に対して境界が鋭く、VLF波が部分反射することを確認した。同じ原理がより短い波長の電離層内でも適用され、部分反射の技術を可能にする。これは下部電離層の研究で有用であることが証明された。
+屈折率 $n_1$ と $n_2$ の媒体間の鋭い境界に電磁波が通常入射する場合、入射パワーが $(n_1 -n_2)^2/(n_1 + n_2)^2$ の割合で反射する (2.5.3節)。 高度約 100km までは、大気の乱れによって空間的な凹凸が生じ、そこから部分的な反射が中周波、およそ 2-6MHz の帯域（波長 0.5-1.5km）で受信されることがある。この反射波は全反射波の $10^3～10^5$ 分の1という微弱なもので、高出力（最大 100kW）の送信機と大きなアンテナアレイが必要であるため、部分反射型システムはの建設は比較的少なくなっている。
+この方法の本質は次のようなものである。高さ h から部分反射を受けた場合、波は h 以下の電離層を2回通過しており、そこで一部が吸収されたことになる。電子密度分布は、吸収が高さによってどのように変化するかを測定することによって決定される。絶対値で十分な校正ができないので、円偏波のE波とO波のパルスを交互に送信し、受信したエコーの振幅を比較するのが一般的な方法である。この比は次で与えられる。
+
+$$\frac{A _E}{A _O} = \frac{R_E}{R_O} \exp \left[-2 \int _0 ^h (\kappa _E - \kappa _O) dh \right] \tag{3.40}$$
+
+ここで、$R_E/R_O$ は、磁性イオン媒質中の鋭い境界における理論的な反射係数（一般に *フレネル反射係数* と呼ばれる）の比であり、屈折率はAppleton-Hartree式（2.58）から取られ、二つの $\kappa$ は二つのモードの吸収係数で、電子密度、地磁気、衝突周波数で表すこともできる。したがって、実験方法は、$A_E/A_O$ の実測値と $R_E/R_O$ の理論値を比較することになる。計算の目的で地磁気強度はよく知られており、衝突周波数は気圧に依存し、モデルから得ることができる。もし実験で振幅だけでなく位相も測定していれば、衝突周波数と電子密度の両方を導き出すことができる。
+部分反射法の価値は、電離層 $I$ を 60〜90km の高さで連続的に観測できることである。特に中低緯度では、電子密度が小さすぎてイオノゾンデでは検出できず、人工衛星もそれほど低い位置の軌道にとどまることができないので、このような方法は難しい。(強力なインコヒーレント散乱レーダー(3.6項)でも長時間の積分が必要である)。 図 3.13 の例では、$10^8 \ \mathrm{m}^{-3}$（$100 \ \mathrm{cm}^{-3}$）程度の電子密度が含まれている。
